Edit Tigers manager

--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,10 +1,7 @@
 team: Tigers
 
-<<<<<<< HEAD
 manager: Kenneth
-=======
-manager: Deborah
->>>>>>> conflict-1
+manager: Brenda
 
 members:
     - Linda
